# navi

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
assets/: icon.icns
navi/: Cargo.toml
navi-core/: Cargo.toml
navi-core/src/: config.rs  db.rs  emacs.rs  graph.rs  lib.rs
navi/src/: app.rs  macos_display.rs  main.rs  painter.rs  theme.rs
scripts/: build-macos.sh  make-logo-source.py
